# pyxthreg

./: LICENSE  README.md  example.py  pyproject.toml
examples/: example.py
pyxthreg/: __init__.py  bootstrap.py  core.py  estimator.py  inference.py  load_data.py  plotting.py  search.py  sequential.py  stargazer.py  utils.py
pyxthreg/datasets/: model_1.dta  model_10.dta  model_11.dta  model_12.dta  model_2.dta  model_3.dta  model_4.dta  model_5.dta  model_6.dta  model_7.dta  model_8.dta  model_9.dta  panel_large.dta  panel_medium.dta  panel_small.dta
